# sndsw

./: CMakeLists.txt
3dEventDisplay/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
3dEventDisplay/assets/shaders/: flat.vert  transparent.frag  transparent.geom  transparent.vert
3dEventDisplay/include/core/: App.hpp  AppSettings.hpp  Callbacks.hpp  Constants.hpp  WindowManager.hpp
3dEventDisplay/include/core/state/: AppState.hpp  AppStateManager.hpp
3dEventDisplay/include/io/: EventData.hpp  HitData.hpp  RunData.hpp  SndswEventManager.hpp
3dEventDisplay/include/rendering/: AxisWidget.hpp  Viewport.hpp
3dEventDisplay/include/rendering/camera/: BasicProjection.hpp  Camera.hpp  OrthographicProjection.hpp  PerspectiveProjection.hpp  Projection.hpp
3dEventDisplay/include/rendering/engine/: GpuMesh.hpp  Material.hpp  Shader.hpp  ShaderMaker.hpp  Texture.hpp  TextureMaker.hpp
3dEventDisplay/include/scene/: Mesh.hpp  Node.hpp  Object.hpp  ObjectFactory.hpp  Scene.hpp
3dEventDisplay/include/state/: AppState.hpp  AppStateManager.hpp
3dEventDisplay/include/ui/: Gui.hpp  JetBrainsMono.h
3dEventDisplay/src/: main.cpp
3dEventDisplay/src/core/: App.cpp  AppSettings.cpp  Callbacks.cpp  WindowManager.cpp
3dEventDisplay/src/core/state/: AppStateManager.cpp
3dEventDisplay/src/io/: EventData.cpp  SndswEventManager.cpp
3dEventDisplay/src/rendering/: AxisWidget.cpp  Viewport.cpp
3dEventDisplay/src/rendering/camera/: BasicProjection.cpp  Camera.cpp  OrthographicProjection.cpp  PerspectiveProjection.cpp
3dEventDisplay/src/rendering/engine/: GpuMesh.cpp  Material.cpp  Shader.cpp  ShaderMaker.cpp  Texture.cpp  TextureMaker.cpp
3dEventDisplay/src/scene/: Mesh.cpp  Node.cpp  Object.cpp  ObjectFactory.cpp  Scene.cpp
3dEventDisplay/src/state/: AppStateManager.cpp
3dEventDisplay/src/ui/: Gui.cpp
3dEventDisplay/src/utils/: StbImpl.cpp
